--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,19 @@
-{
-    
-}
+    {
+        "events": "Мероприятия",
+        "login": "Войти",
+        "exhibitions": "Выставки",
+        "tournaments": "Турниры",
+        "lectures": "Лекции",
+        "cleanup": "Субботники",
+        "Sport": "Спорт",
+        "forkids": "Для детей",
+        "excursions": "Экскурсии",
+        "upcoming": "Ближайшие мероприятия",
+        "orgs": "Организаторы",
+        "apply": "Подать заявку",
+        "partners": "Партнеры",
+        "about": "О нас",
+        "news": "Новости",
+        "contact": "Связаться",
+        "organization": "Организация мероприятий в парках города Бишкек"
+    }
