language add,style fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
     "tournaments": "Tournaments",
     "lectures": "Lectures",
     "cleanup": "Clean-up event",
-    "Sport": "Sport",
+    "sport": "Sports",
     "forkids": "For Kids",
     "excursions": "Excursions",
     "upcoming": "Upcoming events",
