--- a/public/locales/kg/translation.json
+++ b/public/locales/kg/translation.json
@@ -5,7 +5,7 @@
     "tournaments": "Турнирлер",
     "lectures": "Лекциялар",
     "cleanup": "Ишембиликтер",
-    "Sport": "Спорт",
+    "sport": "Спорт",
     "forkids": "Балдар үчүн",
     "excursions": "Экскурсиялар",
     "upcoming": "Алдыда боло турган окуялар",
