--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,7 @@
         "tournaments": "Турниры",
         "lectures": "Лекции",
         "cleanup": "Субботники",
-        "Sport": "Спорт",
+        "sport": "Спорт",
         "forkids": "Для детей",
         "excursions": "Экскурсии",
         "upcoming": "Ближайшие мероприятия",
