add translate to swiper

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,17 @@
         "about": "О нас",
         "news": "Новости",
         "contact": "Связаться",
-        "organization": "Организация мероприятий в парках города Бишкек"
+        "organization": "Организация мероприятий в парках города Бишкек",
+
+        "codifyCEO": "Основатель Динара Руслан",
+        "mega": "MEGA - оператор связи",
+        "megaCEO": "Генеральный директор Нурлан Мамытов",
+        "gpinfocom": "ГП «Инфоком»",
+        "gpinfocomCEO": "Директор Асель Кененбаева",
+        "ministry": "Министерство цифрового развития КР",
+        "ministr": "Министр Талантбек Иманов",
+        "gosuslugi": "Государственный портал электронных услуг КР",
+        "gosuslugiCEO": "Директор Чынгыз Аманатов",
+        "sixboxCEO": "Oснователь Калмурат Джангазиев"
+
     }
