shop locale add

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,7 +26,15 @@
     "ministr": "Minister Talantbek Imanov",
     "gosuslugi": "State portal of electronic services of the KR",
     "gosuslugiCEO": "Director Chyngyz Amanatov",
-    "sixboxCEO": "CEO Kalmurat Dzhangaziyev"
+    "sixboxCEO": "CEO Kalmurat Dzhangaziyev",
 
-    
+    "shop": "Shop",
+    "tshirt": "Park.Go T-Shirt",
+    "tshirtdscr": "White oversized T-shirt with print 92% cotton, 8% lycra",
+    "get": "Get !",
+    "tote": "Park.Go Tote Bag",
+    "totedscr": "White tote bag with print, 40x35 cm 92% cotton, 8% lycra; up to 10 kg",
+    "totelogodscr": "White tote bag with logo, 40x35 cm 92% cotton, 8% lycra; up to 10 kg",
+    "pins": "Park.Go Pins",
+    "pinsdscr": "Pin-print badge set, 2x2 cm 2 pieces, metal"
 }
