--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,6 +26,15 @@
         "ministr": "Министр Талантбек Иманов",
         "gosuslugi": "Государственный портал электронных услуг КР",
         "gosuslugiCEO": "Директор Чынгыз Аманатов",
-        "sixboxCEO": "Oснователь Калмурат Джангазиев"
+        "sixboxCEO": "Oснователь Калмурат Джангазиев",
 
+        "shop": "Магазин",
+        "tshirt": "Футболка Park.Go",
+        "tshirtdscr": "Футболка белая оверсайз с принтом 92% хлопок, 8% лайкра",
+        "get": "Получить !",
+        "tote": "Шоппер Park.Go",
+        "totedscr": "Шоппер белый с принтом, 40х35 см 92% хлопок, 8% лайкра; до 10 кг",
+        "totelogodscr": "Шоппер белый с лого, 40х35 см 92% хлопок, 8% лайкра; до 10 кг",
+        "pins": "Пины Park.Go",
+        "pinsdscr": "Набор значков с принтом на булавке, 2х2 см 2 штуки, металл"
     }
